# beflask

./: .gitignore  LICENSE  Makefile  README.md  app.db  dbseed.py  dbseed_docker.py  pyproject.toml  requirements.txt  run.py
app/: app.db  app.py  config.py  env.dist  forms.py  main.py  models.py
app/admin/: forms.py  main_admin.py
app/admin/templates/: benchmarks.html  user.html  users.html
app/interactive/: main_interactive.py
app/interactive/templates/: ranking.html
app/results/: forms.py  main.py  main_results.py  main_select.py
app/results/templates/: _table_dataset.html  _table_datasets.html  _table_report.html  _table_select.html  best.html  dataset.html  datasets.html  error.html  macros.html  ranking.html  report.html  report_tables.html  select.html
app/static/: .gitignore
app/static/css/: main.css
app/static/js/: report.js  select.js
app/templates/: _benchmarks.html  _nav.html  base.html  config.html  index.html  login.html  password.html  status.html  user.html  users.html
beflask/: __init__.py  app.py  config.py  env.dist  forms.py  main.py  models.py
beflask/admin/: forms.py  main_admin.py
beflask/admin/templates/: _table_benchmarks.html  _table_users.html  benchmark.html  users.html
beflask/interactive/: forms.py  main_interactive.py
beflask/interactive/templates/: experiment.html  iobase.html  ranking.html
beflask/results/: main_results.py
beflask/results/templates/: _table_dataset.html  _table_datasets.html  _table_report.html  best.html  datasets.html  error.html  select.html
beflask/static/css/: main.css
beflask/static/js/: excelFiles.js
beflask/templates/: _header.html  base.html  status.html
tests/: conftest.py  test_login.py  test_main.py
